testiminate  bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,7 @@ div.works-container [class*=col-] {
 }
 .testimonial-item{
     text-align: center;
+    margin-bottom: 20px;
    
 }
 .testimonial-item img{
