--- a/css/style.css
+++ b/css/style.css
@@ -296,3 +296,45 @@ div.works-container [class*=col-] {
     right: 0;
 
 }
+
+/*==========================================pricing========================*/
+#pricing-box div.container{
+    margin-top: 40px;
+    
+}
+.pricing-title{
+        font-size: 16px;
+    font-weight: 400;
+    background-color: #34c6d3;
+    display: inline;
+    padding: 5px;
+   
+}
+.pricing-value{
+    margin: 40px 0 40px 0 !important;
+}
+
+.price-container {
+    padding: 40px 0 30px 0;
+    border: #34C6D4 solid 2px;
+    margin: 20px 0 20px 0;
+}
+.order-details{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin:0 0 60px 0;
+}
+.order-details li{
+    margin:10px 0 10px 0;
+}
+.price-container-lg{
+   margin: 0;
+    padding: 101px 0 80px 0;
+    background-color: #34c6d3;
+    
+}
+.price-container-lg h4.pricing-title{
+    color: #34c6d3;
+    background-color: #fff;
+}
