--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ body {
     margin: 0 auto 0 auto;
 }
 
+.content-box-white{
+    color: #fff;
+}
+
 /*======================butuns=======================*/
 .btn-general {
 
@@ -337,4 +341,37 @@ div.works-container [class*=col-] {
 .price-container-lg h4.pricing-title{
     color: #34c6d3;
     background-color: #fff;
+}
+
+
+/*==================================state=====================================*/
+#state-box{
+    margin: 40px 0 40px 0;
+}
+#state-cover{
+    background-image: url('../img/bg-stats.jpg');
+}
+#state-box .content-box-header{
+    padding-top: 40px;
+    padding-bottom: 50px;
+}
+.darklyer{
+    background-color: rgb(0,0,0,.7);
+}
+
+.state-item h4.count-value{
+    margin: 0;
+    color: #fff;
+}
+.state-item p{
+    color: #64707b;
+}
+
+.state-item i{
+    color: #34c6d3;
+}
+.state-item{
+    padding-bottom:   100px;
+    padding-top: 50px;
+    text-align: center;
 }
