add client  section

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,9 @@ body {
 .content-box-white{
     color: #fff;
 }
+.content-box-black{
+    color: #000;
+}
 
 /*======================butuns=======================*/
 .btn-general {
