--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 html,
 body {
     height: 100%;
+    position: relative;
 }
 
 body {
@@ -31,15 +32,15 @@ body {
 
     text-align: center;
     margin-bottom: 30px;
-    margin-top: 45px;
- animation-duration: 1s;
+    
+    animation-duration: 1s;
 
 }
 
 .content-box-header h3 {
     font-size: 26px;
     font-weight: 400;
-    margin: 8px 0px 5px 0;
+   padding-top: 55px;
 }
 
 .header-underline {
@@ -48,16 +49,18 @@ body {
     margin: 0 auto 0 auto;
 }
 
-.content-box-white{
+.content-box-white {
     color: #fff;
 }
-.content-box-black{
+
+.content-box-black {
     color: #000;
 }
 
-.white-color{
+.white-color {
     color: #fff;
 }
+
 /*======================butuns=======================*/
 .btn-general {
 
@@ -80,6 +83,7 @@ body {
     background-color: #fff;
     color: #41464b;
 }
+
 .btn-grenish {
     border-color: #34c6d3;
     color: #34c6d3;
@@ -91,6 +95,7 @@ body {
     background-color: #34c6d3;
     color: #fff;
 }
+
 /*=======================home========================
 *
 */
@@ -144,10 +149,11 @@ body {
 }
 
 /*====================================service=================*/
-.service-item:hover  .service-icon i{
+.service-item:hover .service-icon i {
     color: #fff;
-    background-color:  #34c6d3;
+    background-color: #34c6d3;
 }
+
 .service-item {
     cursor: pointer;
     margin-bottom: 20px;
@@ -170,39 +176,42 @@ body {
     font-size: 14px;
     color: #41464b;
 }
+
 /*====================================about=================*/
-#about-box{
+#about-box {
     display: table;
     float: lef;
-      height: 700px;
+    height: 700px;
     width: 100%;
 }
-#about-box-inner{
+
+#about-box-inner {
     display: table-cell;
     vertical-align: middle;
 }
 
-.about-content p{
-      font-size: 14px;
+.about-content p {
+    font-size: 14px;
     color: #41464b;
 }
-#about-btn{
-    margin:20px 0 0 0;
+
+#about-btn {
+    margin: 20px 0 0 0;
 }
 
-#about-diagonal-bg{
+#about-diagonal-bg {
     width: 60%;
     height: 700px;
-    float:right;
+    float: right;
     border-top: solid transparent 700px;
     border-left: solid #fff 330px;
     background-image: url(../img/bg-about.jpg)
-    
 }
-#about-underline{
-     border: #34c6d3 solid 2px;
+
+#about-underline {
+    border: #34c6d3 solid 2px;
     width: 40px;
-   margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 /*================================work============================*/
@@ -210,117 +219,138 @@ div.works-container [class*=col-] {
     padding-left: 0;
     padding-right: 0;
 }
-.image-wrapper a  img:hover{
+
+.image-wrapper a img:hover {
     transform: scale(1.5);
-    
+
 }
+
 .image-wrapper {
     overflow: hidden;
-    
+
 }
-.image-wrapper img{
+
+.image-wrapper img {
     transition: transform .5s ease;
 }
 
 /*==============================team===========================*/
 .team h4.name {
-    text-transform:uppercase;
+    text-transform: uppercase;
     font-size: 20px;
     font-weight: 700;
     color: #000;
 }
+
 .team h4.location {
     font-size: 20px;
     font-weight: 400;
     font-style: italic;
     color: #34c6d3;
 }
-.social-link{
+
+.social-link {
     padding: 0;
 }
-.social-link li{
+
+.social-link li {
     list-style: none;
     display: inline;
-     color: #64707b;
+    color: #64707b;
 
 }
 
-.team{
+.team {
     text-align: center;
-   
+
 }
-.teams}{
-     animation-delay: .5s;
+
+.teams
+}
+
+    {
+    animation-delay: .5s;
     animation-duration: 1s;
 }
+
 /*===========================testimonial=============================*/
-.cover-testimonial{
+.cover-testimonial {
     background-image: url('../img/bg-testimonials.jpg');
 }
-#testimonial-title h3{
+
+#testimonial-title h3 {
     color: #fff;
-    
+
 }
-#testimonial-box{
+
+#testimonial-box {
     padding-top: 30px;
     padding-bottom: 50px;
 }
-.testimonial-item{
+
+.testimonial-item {
     text-align: center;
     margin-bottom: 20px;
-   
+
 }
-.testimonial-item img{
+
+.testimonial-item img {
     max-width: 22%;
     max-height: 22%;
     margin: 0 auto 0 auto;
 }
-.testimonial-item blockquote{
+
+.testimonial-item blockquote {
     color: #fff;
     font-size: 18px;
     font-style: italic;
-     position: relative;
+    position: relative;
     height: 108px;
 }
+
 .testimonial-item blockquote::before,
-.testimonial-item blockquote::after{
-   
+.testimonial-item blockquote::after {
+
     color: #fff;
     font-size: 73px;
     position: absolute;
     width: 30px;
     height: 30px;
     line-height: 1;
-    
+
 }
-.testimonial-item blockquote::before{
-  
+
+.testimonial-item blockquote::before {
+
     content: '\201C';
-   
-      left: 0px;
+
+    left: 0px;
     top: -37px;
 }
-.testimonial-item blockquote::after{
-    content:'\201d';
-   bottom: 0;
+
+.testimonial-item blockquote::after {
+    content: '\201d';
+    bottom: 0;
     right: 0;
 
 }
 
 /*==========================================pricing========================*/
-#pricing-box div.container{
+#pricing-box div.container {
     margin-top: 40px;
-    
+
 }
-.pricing-title{
-        font-size: 16px;
+
+.pricing-title {
+    font-size: 16px;
     font-weight: 400;
     background-color: #34c6d3;
     display: inline;
     padding: 5px;
-   
+
 }
-.pricing-value{
+
+.pricing-value {
     margin: 40px 0 40px 0 !important;
 }
 
@@ -329,60 +359,70 @@ div.works-container [class*=col-] {
     border: #34C6D4 solid 2px;
     margin: 20px 0 20px 0;
 }
-.order-details{
+
+.order-details {
     list-style: none;
     margin: 0;
     padding: 0;
-    margin:0 0 60px 0;
+    margin: 0 0 60px 0;
 }
-.order-details li{
-    margin:10px 0 10px 0;
+
+.order-details li {
+    margin: 10px 0 10px 0;
 }
-.price-container-lg{
-   margin: 0;
+
+.price-container-lg {
+    margin: 0;
     padding: 101px 0 80px 0;
     background-color: #34c6d3;
-    
+
 }
-.price-container-lg h4.pricing-title{
+
+.price-container-lg h4.pricing-title {
     color: #34c6d3;
     background-color: #fff;
 }
 
 
 /*==================================state=====================================*/
-#state-box{
-    margin: 40px 0 40px 0;
+#state-box {
+   
 }
-#state-cover{
+
+#state-cover {
     background-image: url('../img/bg-stats.jpg');
 }
-#state-box .content-box-header{
+
+#state-box .content-box-header {
     padding-top: 40px;
     padding-bottom: 50px;
 }
-.darklyer{
-    background-color: rgb(0,0,0,.7);
+
+.darklyer {
+    background-color: rgb(0, 0, 0, .7);
 }
 
-.state-item h4.count-value{
+.state-item h4.count-value {
     margin: 0;
     color: #fff;
 }
-.state-item p{
+
+.state-item p {
     color: #64707b;
 }
 
-.state-item i{
+.state-item i {
     color: #34c6d3;
 }
-.state-item{
-    padding-bottom:   100px;
+
+.state-item {
+    padding-bottom: 100px;
     padding-top: 50px;
     text-align: center;
 }
+
 /*==============================================client===========================*/
-.client{
+.client {
     margin-bottom: 20px;
 }
 
@@ -392,50 +432,113 @@ div.works-container [class*=col-] {
     padding-left: 0;
     padding-bottom: 20px;
     width: 100%;
-    background-color: rgb(0,0,0,.7);
+    background-color: rgb(0, 0, 0, .7);
     margin-top: 10px;
-    
+
 }
-#contact-left-info >h3{
+
+#contact-left-info > h3 {
     color: #fff;
     font-size: 26px;
     font-weight: 400;
-    
+
 }
-#contact-left-info p{
-        color: rgb(255,255,255,.7);
+
+#contact-left-info p {
+    color: rgb(255, 255, 255, .7);
 }
-#contact-left-info strong{
+
+#contact-left-info strong {
     color: #fff;
 }
-#contact-address h3{
+
+#contact-address h3 {
     color: #fff;
 }
+
 #contact-address {
     background-image: url('../img/world-map.png');
     background-size: contain;
     background-repeat: no-repeat;
 }
 
-#contact-right-info >h3{
+#contact-right-info > h3 {
     font-size: 26px;
     font-weight: 400;
-    
-}
-#contact-right-info{
-    margin-left: 70px;
+
 }
 
-.form-control{
+.form-control {
     border-radius: 0;
     background-color: transparent;
     color: #fff;
     margin: 20px 0 20px 0;
 }
 
-.form-control:focus{
-     border-radius: 0;
+.form-control:focus {
+    border-radius: 0;
     background-color: transparent;
     color: #fff;
 }
 
+#contact-social li a i {
+    color: #fff;
+    margin: 0 10px 0 10px;
+}
+
+#copyright-content {
+    background-color: rgb(0, 0, 0, .75);
+
+}
+#bottom-nav{
+    list-style: none;
+    
+}
+#bottom-nav li{
+    display: inline-block;
+    color: #fff;
+}
+#bottom-nav a{
+    color:#fff;
+    font-size: 14px;
+}
+#copyright-left-content p{
+    font-size: 14px;
+    font-weight: 400;
+}
+
+/*=============================================navbar=================*/
+#navbarSupportedContent{
+   
+    
+}
+.navbar-content-back{
+    background-color: rgb(0,0,0,.7);
+}
+a.navbar-brand {
+    padding-left: 70px;
+}
+.nav-link:hover, .nav-link:focus{
+    background: none;
+     color: #34c6d3!important;
+    
+   
+}
+ul.navbar-nav {
+    float: right !important;
+    
+}
+ul.navbar-nav li {
+    padding: 0 5px;
+    
+}
+ul.navbar-nav li>a {
+   text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 400;
+    
+}
+ul.navbar-nav li> a.active {
+   
+    color: #34c6d3 !important;
+}
