--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,14 @@ body {
 
 .content-box {
     width: 100%;
-
+    padding-top: 30px;
+    padding-bottom: 50px;
 }
 
 .content-box-header {
 
     text-align: center;
-   padding-bottom: 30px;
+    padding-bottom: 30px;
     animation-duration: 1s;
 
 }
@@ -39,7 +40,7 @@ body {
 .content-box-header h3 {
     font-size: 26px;
     font-weight: 400;
-   padding-top: 55px;
+
 }
 
 .header-underline {
@@ -155,8 +156,7 @@ body {
 
 .service-item {
     cursor: pointer;
-    margin-bottom: 20px;
-    padding: 20px;
+       padding: 0 0 15px 0;
 }
 
 .service-header h3 {
@@ -165,9 +165,9 @@ body {
 
 .service-icon i {
     float: left;
-    padding: 16px;
+        padding: 5px;
     color: #34c6d3;
-    margin: 4px;
+    margin: 2px 12px 65px 0px;
 
 }
 
@@ -179,7 +179,7 @@ body {
 /*====================================about=================*/
 #about-box {
     display: table;
-    float: lef;
+    float: left;
     height: 700px;
     width: 100%;
 }
@@ -289,7 +289,7 @@ div.works-container [class*=col-] {
 
 .testimonial-item {
     text-align: center;
-    margin-bottom: 20px;
+   
 
 }
 
@@ -304,7 +304,7 @@ div.works-container [class*=col-] {
     font-size: 18px;
     font-style: italic;
     position: relative;
-    height: 108px;
+   
 }
 
 .testimonial-item blockquote::before,
@@ -384,9 +384,7 @@ div.works-container [class*=col-] {
 
 
 /*==================================state=====================================*/
-#state-box {
-   
-}
+#state-box {}
 
 #state-cover {
     background-image: url('../img/bg-stats.jpg');
@@ -489,64 +487,75 @@ div.works-container [class*=col-] {
     background-color: rgb(0, 0, 0, .75);
 
 }
-#bottom-nav{
+
+#bottom-nav {
     list-style: none;
-    
+
 }
-#bottom-nav li{
+
+#bottom-nav li {
     display: inline-block;
     color: #fff;
 }
-#bottom-nav a{
-    color:#fff;
+
+#bottom-nav a {
+    color: #fff;
     font-size: 14px;
 }
-#copyright-left-content p{
+
+#copyright-left-content p {
     font-size: 14px;
     font-weight: 400;
 }
 
 
 /*=============================================navbar=================*/
-#navbarSupportedContent{
-   
-    
+
+#navbarSupportedContent {}
+
+.navbar-content-back {
+    background-color: rgb(0, 0, 0, .7);
 }
-.navbar-content-back{
-    background-color: rgb(0,0,0,.7);
-}
+
 a.navbar-brand {
     padding-left: 70px;
 }
-.nav-link:hover, .nav-link:focus{
+
+.nav-link:hover,
+.nav-link:focus {
     background: none;
-     color: #34c6d3!important;
-    
-   
+    color: #34c6d3 !important;
+
+
 }
+
 ul.navbar-nav {
-    float: right !important;
     
+
 }
+
 ul.navbar-nav li {
     padding: 0 5px;
-    
+
 }
-ul.navbar-nav li>a {
-   text-transform: uppercase;
+
+ul.navbar-nav li > a {
+    text-transform: uppercase;
     font-size: 14px;
     font-weight: 400;
-    
+
 }
-ul.navbar-nav li> a.active {
-   
+
+ul.navbar-nav li > a.active {
+
     color: #34c6d3 !important;
 }
+
 /*=======================================back-to-top=========================*/
-.back-to-top{
-  position: fixed;
-        padding: 5px 12px 7px 12px;
-        bottom: 8px;
+.back-to-top {
+    position: fixed;
+    padding: 5px 12px 7px 12px;
+    bottom: 8px;
     right: 12px;
     border-radius: 0;
     display: none;
